# sqlitecpp-thin

./: .clang-format  .gitignore  1_build_conan_deps.sh  2_config_build_install_test.sh  3_test-installed-lib.sh  CMakeLists.txt  LICENSE  README.md  conanfile.txt  cpp_warnings.cmake
.github/workflows/: build-and-test.yml
cmake/: warnings_clang.cmake  warnings_gcc.cmake  warnings_msvc.cmake
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  example.cpp  int_storage_test.cpp
src/sqlitecpp-thin/: CMakeLists.txt  common.cpp  common.hpp  database.cpp  error.cpp  sqlite3-exception.hpp  sqlite3-expected.hpp  sqlite3.cpp  sqlite3.hpp  sqlitecpp-thin-config.cmake.in  statement.cpp
src/tests/: CMakeLists.txt  empty_test.cpp  tests.cpp
src/tests/combined/: database_open_close.cpp  test_util.hpp
src/tests/exception/: error_test.cpp  pch.hpp
src/tests/expected/: database_test.cpp  error.cpp  pch.hpp  sqlite3_test.cpp
test-installed-lib/: CMakeLists.txt  test-installed-lib-exception.cpp  test-installed-lib-expected.cpp
